<resources>
    <string name="app_name">Trivia Renesis Test</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="select_a_category">Select a category</string>
    <string name="quiz_details">Quiz Details</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="question">Question?</string>
    <string name="continue_str">Continue</string>
    <string name="results">Results</string>
</resources>