<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".activities.QuizActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/verify_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:onClick="finish_quiz"
                android:layout_centerVertical="true"
                app:tint="@color/primary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/verify_back"
                android:text="Questions"
                android:textColor="@color/primary"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:layout_margin="10dp"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="15dp"
        android:orientation="vertical"
        android:weightSum="10">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/question"
                android:textColor="@color/primary"
                android:textSize="25sp" />
        </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical" >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/opt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_a"
                android:alpha="0.5"
                android:padding="5dp"
                android:background="@drawable/option_bg"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="#ffffff"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/opt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_b"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:alpha="0.5"
                android:background="@drawable/option_bg"
                android:padding="5dp"
                android:textSize="20sp"
                android:textColor="#ffffff"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/opt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_c"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:background="@drawable/option_bg"
                android:textSize="20sp"
                android:alpha="0.5"
                android:textColor="#ffffff"

                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/opt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_d"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:background="@drawable/option_bg"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:alpha="0.5"

                />


        </LinearLayout>
    </LinearLayout>





    <ProgressBar
        android:id="@+id/progress_questions"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

</RelativeLayout>